chore: Synchronize production configuration with Render environment variables (CORS, URLs, and Security)